# jplag_wrapper

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  flake.nix  justfile  rustfmt.toml
completions/: _jplag_wrapper  _jplag_wrapper.ps1  jplag_wrapper.bash  jplag_wrapper.elv  jplag_wrapper.fish
dev_files/: ignores.txt
ressources/: excludes.txt  generate.sh
src/: archive_handler.rs  config.rs  custom_error.rs  custom_errors.rs  helper.rs  macros.rs  main.rs
src/conf/: args.rs  config.rs  mod.rs
