[package]
name = "jplag_wrapper"
version = "1.0.1"
edition = "2021"
authors = ["HaDeS_Monsta"]

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
anyhow = "1.0.97"
walkdir = "2.5.0"
zip = "2.2.3"
flate2 = "1.1.0"
tar = "0.4.44"
sevenz-rust = "0.6.1"
unrar = "0.5.8"

[build-dependencies]
anyhow = "1.0.97"
clap = {version = "4.5.32", features = ["derive"]}
clap_complete = "4.5.46"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
toml = "0.8.20"

[profile.release]
lto = true
codegen-units = 1
