[package]
name = "jplag_wrapper"
version.workspace = true
edition.workspace = true
authors.workspace = true

[workspace.package]
version = "3.1.0"
edition = "2024"
authors = ["HaDeS_Monsta"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[workspace.dependencies]
clap = { version = "4.5.47", features = ["derive"] }
clap_complete = "4.5.57"
color-eyre = "0.6.5"
flate2 = "1.1.2"
serde = { version = "1.0.219", features = ["derive"] }
sevenz-rust = "0.6.1"
tar = "0.4.44"
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
unrar = "0.5.8"
walkdir = "2.5.0"
zip = "5.0.0"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
flate2.workspace = true
serde.workspace = true
sevenz-rust.workspace = true
tar.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
unrar.workspace = true
walkdir.workspace = true
zip.workspace = true

[build-dependencies]
clap.workspace = true
clap_complete.workspace = true
color-eyre.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
